--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 KERNEL_SOURCE=https://github.com/mohammad92/android_kernel_samsung_sm8450
 KERNEL_SOURCE_BRANCH=CWAI
-KERNEL_CONFIG=https://github.com/mohammad92/android_kernel_samsung_sm8450/arch/arm64/configs/defconfig
+KERNEL_CONFIG=/defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
